# PyHardwareLibrary

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CoboltDebugSerial.py  CoboltDevice.py  CommunicationPort.py  DebugEchoCommunicationPort.py  HOWTO-Threads.md  LaserSourceDevice.py  MANIFEST.in  PhysicalDevice.py  README-1-USB.md  README-2-RS232.md  README-3-USB-Cameras.md  README-4-New-device-coding-example.md  README-5-Communication-ports.md  README-6-Bluetooth-Arduino.md  README-6-DebugPort.md  README-7-Sutter-ROE-200.md  README-8-DebugPort.md  README-Coding Process example.md  README-Communication ports.md  README-Communication-ports.md  README-New device coding example.md  README-RS232.md  README-USB-Cameras.md  README-USB.md  README.md  SCPI.md  SerialPort.py  cobolt.py  pyproject.toml  requirements.txt  sas.py  scratch.py  setup.py  setupEnvironment.sh  test.py  testCoboltDevice.py  (+7 more)
.github/workflows/: publish.yml  tests.yml
1-simple/: cobolt.py
2-class/: cobolt.py
3-class+debugPort/: CoboltDebugSerial.py  cobolt.py
README.assets/: integra.png.sb-90e26077-lWIRgO
docs/: pyro5-devicemanager-plan.md  pyro5-remoting-notes.md
docs/source/: README-1-USB.md  README-2-RS232.md  README-3-USB-Cameras.md  README-4-New-device-coding-example.md  README-5-Communication-ports.md  README-6-DebugPort.md  README-7-Sutter-ROE-200.md  README.assets  conf.py  index.rst
examples/1-simple/: cobolt.py
examples/2-class/: cobolt.py
examples/3-class+debugPort/: cobolt.py
examples/verdig/: README.md  status_monitor_dll.py  temperature_monitor_native.py
hardwarelibrary/: Cobolt.py  CommunicationPort.py  LinearMotionDevice.py  PhysicalDevice.py  SutterDevice.py  __init__.py  __main__.py  capabilities.py  coboltDeviceDescriptor.py  communicationport.py  devicecontroller.py  devicemanager.py  echodevice.py  findUSB.py  notificationcenter.py  oceaninsight.py  physicaldevice.py  remotable.py  spectro.py  test.csv  testCobolt.py  testOptotune.py  threads.py  threads2.py  usbd.py  usbport.py  utils.py
hardwarelibrary/cameras/: __init__.py  camera.py
hardwarelibrary/cobolt/: Cobolt.py
hardwarelibrary/communication/: __init__.py  commands.py  communicationport.py  debugport.py  diagnostics.py  echo.py  echoport.py  findUSBBackend.py  hidport.py  labviewtcpport.py  prologixgpibport.py  serialport.py  socket1.py  socket2.py  socketclient.py  socketserver.py  sutter.py  tcpport.py  usbd.py  usbport.py
hardwarelibrary/daq/: __init__.py  daqdevice.py  labjackdevice.py  sr830device.py
hardwarelibrary/irises/: __init__.py  irisdevice.py  uniblitzai25device.py
hardwarelibrary/lasersources/: cobolt.py
hardwarelibrary/manuals/: Coherent-HOPS-1-Overview-and-Runbook.md  Coherent-HOPS-2-USB-and-DLL-Protocol.md  Coherent-HOPS-3-I2C-Wire-Protocol.md  Sirah-Matisse-Serial-Commands.md  Spectra-Physics-Millennia-eV-Serial-Commands.md
hardwarelibrary/motion/: __init__.py  intellidrivedevice.py  linearmotiondevice.py  rotationdevice.py  sutter.py  sutterdevice.py  thorlabs.py
hardwarelibrary/oscilloscope/: __init__.py  oscilloscopedevice.py
hardwarelibrary/photoncounters/: hamamatsu.py
hardwarelibrary/powermeters/: __init__.py  capabilities.py  fieldmasterdevice.py  integradevice.py  powermeterdevice.py
hardwarelibrary/powerstrips/: __init__.py  capabilities.py  powerstripdevice.py  pwrusb.py
hardwarelibrary/remoting/: __init__.py  devicehost.py  (+6 more)
(+108 files in other folders)
