[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hardwarelibrary"
dynamic = ["version"]
description = "Cross-platform (macOS, Windows, Linux, etc...) library to control various hardware devices mostly for scientific applications."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Daniel Cote", email = "dccote@cervo.ulaval.ca" },
]
keywords = [
  "hardware", "devices", "usb", "communication", "app", "control", "spectrometer", "powermeter", "camera"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent"
]
dependencies = [
  "notifcenter",
  "numpy",
  "matplotlib",
  "pyserial",
  "pyusb",
  "pyftdi",
  "LabJackPython"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
]
docs = [
  "sphinx",
  "furo",
  "myst-parser",
  "sphinxcontrib-mermaid",
]
thorlabs = [
  # Backend for ThorlabsKinesisDevice (the Thorlabs Kinesis runtime wrapper).
  "pylablib",
]

[project.urls]
Homepage = "https://github.com/DCC-Lab/PyHardwareLibrary"

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["hardwarelibrary/tests"]
python_files = ["test*.py"]
norecursedirs = ["deprecated"]
